--- a/sample-app/dev/application.yaml
+++ b/sample-app/dev/application.yaml
@@ -1,15 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sample-app-prod
+  name: sample-app-dev
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/ahmadmajdi96/gitops-configs.git
     targetRevision: main
-    path: prod/sample-app
+    path: dev
   destination:
     server: https://kubernetes.default.svc
-    namespace: prod
-  syncPolicy: {}
+    namespace: dev
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
