--- a/sample-app/prod/application.yaml
+++ b/sample-app/prod/application.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/ahmadmajdi96/gitops-configs.git
+    repoURL:  https://github.com/ahmadmajdi96/gitops-configs.git
     targetRevision: main
-    path: dev/sample-app
+    path: dev
   destination:
     server: https://kubernetes.default.svc
     namespace: dev
@@ -16,3 +16,5 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
