--- a/sample-app/prod/service.yaml
+++ b/sample-app/prod/service.yaml
@@ -2,12 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sample-app
-  namespace: dev
+  namespace: prod
 spec:
+  type: ClusterIP
   selector:
     app: sample-app
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3000
-  type: ClusterIP
+  - port: 80
+    targetPort: 8080
