--- a/argo-apps/sample-app-dev.yaml
+++ b/argo-apps/sample-app-dev.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sample-app-dev
+  name: testing_ops-dev
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/ahmadmajdi96/gitops-configs.git
     targetRevision: main
-    path: dev/sample-app
+    path: dev/testing_ops
   destination:
     server: https://kubernetes.default.svc
     namespace: dev
