--- a/sample-app/dev/service.yaml
+++ b/sample-app/dev/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample-app
+  name: testing_ops
   namespace: dev
 spec:
   selector:
-    app: sample-app
+    app: testing_ops
   ports:
     - protocol: TCP
       port: 80
