--- a/sample-app/prod/deployment.yaml
+++ b/sample-app/prod/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sample-app
+  name: testing_ops
   namespace: prod
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: sample-app
+      app: testing_ops
   template:
     metadata:
       labels:
-        app: sample-app
+        app: testing_ops
     spec:
       containers:
-      - name: sample-app
+      - name: testing_ops
         image: ghcr.io/ahmadmajdi96/testing_ops:latest   # update with a stable tag
         ports:
         - containerPort: 8080
