--- a/sample-app/prod/service.yaml
+++ b/sample-app/prod/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample-app
+  name: testing_ops
   namespace: prod
 spec:
   type: ClusterIP
   selector:
-    app: sample-app
+    app: testing_ops
   ports:
   - port: 80
     targetPort: 8080
