--- a/services/testing_ops/Dockerfile
+++ b/services/testing_ops/Dockerfile
@@ -1,39 +1,26 @@
 # Stage 1: Build
-FROM node:20-alpine AS build
-
-# Install basic build tools for npm native modules
-RUN apk add --no-cache python3 make g++
+FROM python:3.12-slim AS build
 
 WORKDIR /app
 
-# Copy only package files first for caching
-COPY package*.json ./
+# Copy dependencies and install
+COPY app/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Install all dependencies (dev + prod)
-RUN npm ci
-
-# Copy the rest of the source code
-COPY . .
-
-# Build the app (e.g., NestJS)
-RUN npm run build
+# Copy app code
+COPY app/ ./
 
 # Stage 2: Production image
-FROM node:20-alpine
+FROM python:3.12-slim
 
 WORKDIR /app
 
-# Copy built artifacts
-COPY --from=build /app/dist ./dist
+# Copy installed packages
+COPY --from=build /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
+COPY --from=build /app /app
 
-# Copy package.json and lock file
-COPY --from=build /app/package*.json ./
+# Expose FastAPI port
+EXPOSE 8000
 
-# Install only production dependencies
-RUN npm ci --omit=dev
-
-# Expose the app port
-EXPOSE 3000
-
-# Start the application
-CMD ["node", "dist/main.js"]
+# Run FastAPI
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
