--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,7 @@ jobs:
           git config user.name "Ahmad Salameh"
           git config user.email "ahmad.majdi96@gmail.com"
           cd services/testing_ops/$ENV
-          sed -i "s|image: .*|image: $IMAGE|" deployment.yaml
+          # sed -i "s|image: .*|image: $IMAGE|" deployment.yaml
           git add deployment.yaml
           git commit -m "Update $ENV testing_ops $IMAGE" || echo "no changes"
           git push origin $GITHUB_REF_NAME
