--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,8 +25,8 @@ jobs:
           git clone https://github.com/ahmadmajdi96/gitops-configs.git
           git config user.name "Ahmad Salameh"
           git config user.email "ahmad.majdi96@gmail.com"
-          cd services/testing_ops/$ENV
-          # sed -i "s|image: .*|image: $IMAGE|" deployment.yaml
+          cd services/testing_ops/dev
+          sed -i "s|image: .*|image: $IMAGE|" deployment.yaml
           git add deployment.yaml
           git commit -m "Update $ENV testing_ops $IMAGE" || echo "no changes"
           git push origin $GITHUB_REF_NAME
