--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,4 +29,4 @@ jobs:
           sed -i "s|image: .*|image: $IMAGE|" deployment.yaml
           git add deployment.yaml
           git commit -m "Update $ENV testing_ops $IMAGE" || echo "no changes"
-          git push origin gitops-configs
+          git push origin main
