--- a/services/testing-ops/dev/application.yaml
+++ b/services/testing-ops/dev/application.yaml
@@ -1,12 +1,12 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: testing_ops-dev
+  name: testing-ops-dev
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL:  https://github.com/ahmadmajdi96/gitops-configs.git
+    repoURL: https://github.com/ahmadmajdi96/gitops-configs.git
     targetRevision: main
     path: dev
   destination:
