--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,8 +15,8 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
       - name: Build & push image
         run: |
-          IMAGE=docker.io/ahmadmajdi96/testing_ops:${{ github.sha }}
-          docker build -t $IMAGE ./services/testing_ops
+          IMAGE=docker.io/ahmadmajdi96/testing-ops:${{ github.sha }}
+          docker build -t $IMAGE ./services/testing-ops
           docker push $IMAGE
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
       - name: Update dev overlay
@@ -25,8 +25,8 @@ jobs:
           git clone https://x-access-token:${{ secrets.GH_PAT }}@github.com/ahmadmajdi96/gitops-configs.git          
           git config --global user.name "Ahmad Salameh"
           git config --global user.email "ahmad.majdi96@gmail.com"
-          cd gitops-configs/services/testing_ops/dev
+          cd gitops-configs/services/testing-ops/dev
           sed -i "s|image: .*|image: $IMAGE|" deployment.yaml
           git add deployment.yaml
-          git commit -m "Update $ENV testing_ops $IMAGE" || echo "no changes"
+          git commit -m "Update $ENV testing-ops $IMAGE" || echo "no changes"
           git push origin main
