--- a/services/testing-ops/dev/service.yaml
+++ b/services/testing-ops/dev/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: testing_ops
+  name: testing-ops
   namespace: dev
 spec:
   selector:
-    app: testing_ops
+    app: testing-ops
   ports:
     - protocol: TCP
       port: 80
