--- a/services/testing-ops/prod/service.yaml
+++ b/services/testing-ops/prod/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: testing_ops
+  name: testing-ops
   namespace: prod
 spec:
   type: ClusterIP
   selector:
-    app: testing_ops
+    app: testing-ops
   ports:
   - port: 80
     targetPort: 8080
